--- a/templates/hotel-details.html
+++ b/templates/hotel-details.html
@@ -497,6 +497,61 @@
                                 <div class="policy-items"></div>
                             </div>
                         </div>
+
+                        <!-- Shuttle Service -->
+                        <div class="policy-card" id="policyShuttle">
+                            <div class="policy-icon">
+                                <i class="fas fa-shuttle-van"></i>
+                            </div>
+                            <div class="policy-content">
+                                <h4>Shuttle Service</h4>
+                                <div class="policy-items"></div>
+                            </div>
+                        </div>
+
+                        <!-- Smoking Policy -->
+                        <div class="policy-card" id="policySmoking">
+                            <div class="policy-icon">
+                                <i class="fas fa-smoking-ban"></i>
+                            </div>
+                            <div class="policy-content">
+                                <h4>Smoking Policy</h4>
+                                <div class="policy-items"></div>
+                            </div>
+                        </div>
+
+                        <!-- Age Restriction -->
+                        <div class="policy-card" id="policyAgeRestriction">
+                            <div class="policy-icon">
+                                <i class="fas fa-id-card"></i>
+                            </div>
+                            <div class="policy-content">
+                                <h4>Age Restriction</h4>
+                                <div class="policy-items"></div>
+                            </div>
+                        </div>
+
+                        <!-- Visa / Entry -->
+                        <div class="policy-card" id="policyVisa">
+                            <div class="policy-icon">
+                                <i class="fas fa-passport"></i>
+                            </div>
+                            <div class="policy-content">
+                                <h4>Visa &amp; Entry</h4>
+                                <div class="policy-items"></div>
+                            </div>
+                        </div>
+
+                        <!-- No-show Policy -->
+                        <div class="policy-card" id="policyNoShow">
+                            <div class="policy-icon">
+                                <i class="fas fa-calendar-times"></i>
+                            </div>
+                            <div class="policy-content">
+                                <h4>No-show Policy</h4>
+                                <div class="policy-items"></div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Loading/Error States -->
