--- a/templates/hotel-details.html
+++ b/templates/hotel-details.html
@@ -658,6 +658,7 @@
         });
     </script>
     <script src="../js/auth-guard.js"></script>
+    <script src="../js/main.js"></script>
 
     <script src="../js/hotel-api.js"></script>
     <script src="../js/expedia-hotel-enhancements.js"></script>
